SERVER-47854 Validation reports MB of I/O per second in the currentOp command response